// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should ask the Nexus client to uninstall and then install a new version of a package with a given name on update of package 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "description": "bar",
        "name": "foo",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Should have installed package after call to install 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "description": "bar",
        "name": "foo",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Should install depency packages with original package 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "description": "bar",
        "name": "first",
      },
    ],
    [
      {
        "dependencies": [
          "first",
        ],
        "description": "baz",
        "name": "second",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Should parse response correctly 1`] = `
[
  {
    "dependencies": [],
    "description": "Event Bus similar to the Nexus function system, but available outside of the GUI",
    "name": "Event Bus",
    "packageName": "eventbus",
    "url": "https://keneanung.github.io/nexus-event-bus/EventBus.nxs",
  },
]
`;

exports[`Should update correctly if called consecutely 1`] = `
[
  {
    "dependencies": [
      "secondFoo",
    ],
    "description": "This is the second response",
    "name": "second response",
    "packageName": "second",
    "url": "https://keneanung.github.io/nexus-event-bus/second.nxs",
  },
]
`;

exports[`Should use installed depency packages with original package 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "dependencies": [
          "first",
        ],
        "description": "baz",
        "name": "second",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
